# motion_rank

./: .gitignore  Cargo.toml  README.md  db.sql  deploy.sh  motionrank.service  sqlx-data.json
assets/: index.js  loaderio-8d5e218316d47a6a53c509ab54bad5ff.txt  player.js  style.css  upload.js  video.css
bash/: build.sh  log.sh  restart.sh
migrations/: 20230123142147_init.sql
src/: appconfig.rs  logged_user.rs  main.rs  models.rs
src/app/: auth.rs  layout.rs  mail.rs  mod.rs  user.rs  video.rs  video_access.rs  video_review.rs
src/app/project/: access.rs  mod.rs  upload.rs  video.rs
src/service/: bunnycdn.rs  mod.rs
